2005-12-20  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2005-09-24  Ben Elliston  <bje@gnu.org>

	* packaging/pkg/pkginfo (EMAIL): Update mail address.

2005-07-06  Ben Elliston  <bje@gnu.org>

	The src/dejagnu tree on sourceware.org is now defunct.
	Use packaged versions of DejaGnu instead.

2005-07-06  Ben Elliston  <bje@gnu.org>

	Backport from sourceware:

	2004-11-11  Nick Clifton  <nickc@redhat.com>

	* lib/libgloss.exp (libio_include_flags, g++_include_flags,
	winsup_include_flags): Revert previous patch, restoring the use of
	-I, for all libraries except newlib.  Newlib needs -isystem to
	avoid the problems with <limits.h> but the C++ and winsup
	libraries need -I because -isystem generates an implicit 'extern
	"C"' which may not be appropriate for certain targets.

2005-07-06  Aldy Hernandez  <aldyh@redhat.com>

	* baseboards/ms1-sid.exp: New.

2005-07-01  Ben Elliston  <bje@gnu.org>

	Backport from mainline:

	2004-10-28  Nick Clifton  <nickc@redhat.com>
	* baseboards/iq2000-sim.exp: New file.

	2004-06-08  Alexandre Oliva  <aoliva@redhat.com>
	* baseboards/mn10300-sim.exp: Set needs_status_wrapper and
	noresults to zero.

	2004-05-13  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
	* baseboards/m32r-linux-sim.exp: Add New file.

2005-06-24  Ben Elliston  <bje@gnu.org>

	* MAINTAINERS: Update my email address.

2005-06-24  Ben Elliston  <bje@gnu.org>

	* Update the FSF's physical address throughout.

2005-06-22  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2004-08-22  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2004-08-20  Daniel Jacobowitz  <dan@debian.org>

	* testglue.c: Prototype abort(3) and exit(3).

2004-02-21  Ben Elliston  <bje@wasabisystems.com>

	* lib/libgloss.exp (build_wrapper): Remove redundant set command.

2004-02-08  Daniel Jacobowitz  <drow@mvista.com>
