@@ -1,5 +1,5 @@
 # This is a list of toolchains that are supported on this board.
-set_board_info target_install {ms1-elf}
+set_board_info target_install {mt-elf}
 
 # Load a baseboard description for SID simulators.
 load_base_board_description "basic-sid"
@@ -9,9 +9,9 @@ set_board_info ldflags "-msim [libgloss_link_flags] [newlib_link_flags]"
 verbose "Using simulator [board_info $board sim]\n"
 set_board_info sim [find_rawsid]
 if { ${tool} == "gdb" } {
-    set_board_info sim,options "-f [find_sid_conf ms1-gdb]"
+    set_board_info sim,options "-f [find_sid_conf mt-gdb]"
 } else {
-    set_board_info sim,options "-f [find_sid_conf ms1-gloss]"
+    set_board_info sim,options "-f [find_sid_conf mt-gloss]"
 }
 
 # Used by a few gcc.c-torture testcases when trampolines are used.
@@ -23,9 +23,6 @@ set_board_info gcc,no_label_values  1
 # Not needed by SID anymore, but needed to suppress warning in
 # gdb/testsuite/config/sid.exp.
 set_board_info sim,defaultendian "-EB"
-
-#verbose "Using simulator [board_info $board sim]\n"
-#set_board_info sim [find_sid "ms1-elf"]
 
 # Load the generic configuration for this board. This will define a basic set
 # of routines needed by the tool to communicate with the board.
